<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MealInput">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#008AE8"
            android:text="@string/back"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></View>

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="139dp"
            android:layout_height="88dp"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@drawable/white_bg"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="SELECT A MEAL"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="#A9A9A9"
            android:textSize="25sp" />
        <Button
            android:id="@+id/breakfast"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_marginTop="60dp"
            android:text="@string/breakfast"
            android:textSize="17sp" />


        <Button
            android:id="@+id/lunch"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/lunch"
            android:layout_marginTop="10dp"
            android:textSize="17sp" />

        <Button
            android:id="@+id/dinner"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_marginTop="10dp"
            android:text="@string/dinner"
            android:textSize="17sp"
            />
    </LinearLayout>
</LinearLayout>

