<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">
        <Button
            android:id="@+id/back10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_gravity="center"
            android:text="@string/Back"
            android:textColor="#FFFFFF"
            style="?android:attr/borderlessButtonStyle"
            android:background="#008AE8"
            android:textSize="20dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></View>

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="139dp"
            android:layout_height="88dp"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center|left"
        android:background="@drawable/white_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/common_foods"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/omega_3"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <androidx.recyclerview.widget.RecyclerView android:id="@+id/omega3list"
            android:layout_width="300dp"
            android:layout_marginLeft="30dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
          />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/omega_6"
            android:textSize="18sp"
            android:textStyle="bold|italic"
         />

        <androidx.recyclerview.widget.RecyclerView android:id="@+id/omega6list"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>













</LinearLayout>

