<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MealinputQuery.SearchViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#008AE8"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></View>

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="139dp"
            android:layout_height="88dp"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@drawable/white_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:paddingLeft="10dp"
            android:text="@string/input_meal"
            android:textColor="#A9A9A9"
            android:textSize="25sp" />

        <SearchView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:completionThreshold="1"
            android:hint="@string/enter_meal" />

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="8"
            android:hint="@string/enter_weight_in_grams"
            android:inputType="numberDecimal" />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1"></View>

        <Button
            android:id="@+id/input_meal"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:background="@drawable/button"
            android:onClick="SubmitMeal"
            android:text="@string/input_meal"
            android:textColor="@android:color/white" />
    </LinearLayout>


</LinearLayout>