<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#848F9C"
    tools:context=".mealType">

    <TextView
        android:id="@+id/textboxChooseDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:text="Database: "
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="@+id/textView14" />

    <CheckBox
        android:id="@+id/buttonCNF"
        android:layout_width="73dp"
        android:layout_height="31dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:text="CNF"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textboxChooseDatabase" />

    <CheckBox
        android:id="@+id/buttonUSDA"
        android:layout_width="73dp"
        android:layout_height="31dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:text="USDA"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textboxChooseDatabase" />

    <Button
        android:id="@+id/mealLunch"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:background="@drawable/button"
        android:text="@string/lunch"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mealDinner"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button"
        android:text="@string/dinner"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealLunch" />

    <Button
        android:id="@+id/mealBreakfast"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button"
        android:text="@string/breakfast"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/mealLunch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="50dp"
        android:text="SELECT A MEAL"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/mealBreakfast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>